[package]
name = "ld39"
version = "0.1.0"
authors = ["Aaron"]

[dependencies]
specs = "0.9.3"
glutin = "0.9.2"
gfx = "0.16.1"
gfx_device_gl = "0.14.1"
gfx_window_glutin = "0.17.0"
cgmath = "0.14.0"
image = "0.14.0"
rodio = "0.5.1"
serde_json = "1.0.2"
serde_derive = "1.0.11"
serde = "1.0.11"
rusttype = "0.2.1"
