[package]
name = "ld39"
version = "0.1.0"
authors = ["Aaron"]

[dependencies]
specs = "0.9.3"
glutin = "0.12.2"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
gfx_window_glutin = "0.20.0"
cgmath = "0.16.0"
image = "0.18.0"
rodio = "0.6.0"
serde_json = "1.0.2"
serde_derive = "1.0.11"
serde = "1.0.11"
rusttype = "0.3.1"
gfx_glyph = "0.8.2"
