[package]
name = "ld39"
version = "1.1.0"
authors = ["Aaron"]

[dependencies]
specs = "0.11.0"
glutin = "0.17"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
gfx_window_glutin = "0.25"
cgmath = "0.16.0"
image = "0.18.0"
rodio = "0.7.0"
serde_json = "1.0.2"
serde_derive = "1.0.11"
serde = "1.0.11"
rusttype = "~0.5.0"
gfx_glyph = "0.10.1"
lyon_tessellation = "0.10.0"
lyon_path = "0.10.0"
rand = "~0.4.0"
rand_derive = "~0.3.0"
winit = "0.16.0"

[dependencies.conrod]
features = ["gfx_rs", "winit"]
version = "0.61.1"
